# ostrostroj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  armv8-cortexa53-gcc.cmake  build.gradle  settings.gradle
app/: build.gradle
app/src/main/resources/: log4j2.xml
app/src/main/scala/com/buransky/ostrostroj/player/: App.scala  Player.scala  package.scala
app/src/main/scala/com/buransky/ostrostroj/player/audio/: JackAudio.scala
app/src/main/scala/com/buransky/ostrostroj/player/midi/: MidiCommands.scala  MidiDeviceManager.scala  MidiReceiver.scala
app/src/main/scala/org/jaudiolibs/jnajack/: OstrostrojJackClient.scala
app/src/test/scala/com/buransky/ostrostroj/player/: AppSuite.scala
cmake/: armv8-cortexa53-gcc.cmake
cmake/modules/: FindJack.cmake
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt
lib/aarch64-none-linux-gnu/: CMakeLists.txt
max7219/: build.gradle
max7219/src/main/java/com/buransky/gpio/: Gpio.java
max7219/src/main/java/com/buransky/gpio/input/: GpioSwitches.java
max7219/src/main/java/com/buransky/gpio/output/: GpioGraphics.java
max7219/src/main/java/com/buransky/gpio/output/max7219/: EightSegmentDisplay.java  LedMatrixDisplay.java
max7219/src/main/java/com/buransky/gpio/pi4j/: Pi4jGpio.java  Pi4jGpioGraphics.java  Pi4jGpioSwitches.java
max7219/src/main/java/com/buransky/gpio/platform/: OdroidC2Pins.java
ostrostroj-app/: build.gradle  settings.gradle
ostrostroj-app/gradle/wrapper/: gradle-wrapper.properties
ostrostroj-app/src/main/resources/: application.conf  logback.xml
ostrostroj-app/src/main/scala/com/buransky/ostrostroj/: Main.scala
ostrostroj-app/src/main/scala/com/buransky/ostrostroj/app/: Main.scala  OstrostrojApp.scala
ostrostroj-app/src/main/scala/com/buransky/ostrostroj/app/audio/: AudioBuffer.scala  AudioInput.scala  AudioMixer.scala  AudioOutput.scala  AudioPlayer.scala  AudioProvider.scala  AudioReaderWriter.scala  JavaSoundOutput.scala  MixingInputStream.scala  OstrostrojPlayer.scala  PlaylistInput.scala  RandomAccessInputStream.scala
ostrostroj-app/src/main/scala/com/buransky/ostrostroj/app/common/: OstrostrojConfig.scala  OstrostrojException.scala  OstrostrojMessage.scala
ostrostroj-app/src/main/scala/com/buransky/ostrostroj/app/controller/: Keyboard.scala  LedMatrix.scala  Max7219.scala  Model.scala  OldMax7219.scala  PedalController.scala  RgbLed.scala
ostrostroj-app/src/main/scala/com/buransky/ostrostroj/app/controls/: BitmapDisplay.scala  Button.scala  Keyboard.scala  OstrostrojController.scala  RgbLed.scala
ostrostroj-app/src/main/scala/com/buransky/ostrostroj/driver/: GpioDriver.scala  MmapGpioDriver.scala  MmapGpioPin.scala
ostrostroj-app/src/sysTest/resources/: logback-test.xml
ostrostroj-app/src/sysTest/resources/systest-playlist/: systest-playlist.json
ostrostroj-app/src/sysTest/resources/systest-playlist/song1/: song1.json
ostrostroj-app/src/sysTest/resources/systest-playlist/song2/: song2.json
ostrostroj-app/src/test/resources/playlist/: playlist.json
ostrostroj-app/src/test/resources/playlist/song1/: song.json  song1.json
ostrostroj-app/src/test/resources/playlist/song2/: song.json
ostrostroj-sync/: build.gradle
scripts/: copyAndRun.bat  unzipAndRun.sh
src/: CMakeLists.txt  common.hpp  engine.cpp  engine.hpp  filter.hpp  main.cpp  project.cpp  project.hpp  sample.cpp  sample.hpp  soundcard.cpp  soundcard.h  soundcard.hpp
(+96 files in other folders)
