cmake_minimum_required(VERSION 3.28.0)
project(ostrostroj VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
add_subdirectory(lib/${CMAKE_CXX_COMPILER_TARGET})
add_subdirectory(lib/spdlog)
set(JACK_LIBRARIES "${PROJECT_SOURCE_DIR}/lib/aarch64-none-linux-gnu/lib/libjack.so")
set(LIBREMIDI_HEADER_ONLY ON)
add_subdirectory(lib/libremidi)
set(BUILD_SHARED_LIBS OFF)
set(BUILD_PROGRAMS OFF)
set(BUILD_EXAMPLES OFF)
set(BUILD_TESTING OFF)
set(ENABLE_EXTERNAL_LIBS OFF)
set(ENABLE_MPEG OFF)
set(ENABLE_CPACK OFF)
set(ENABLE_PACKAGE_CONFIG OFF)
set(INSTALL_PKGCONFIG_MODULE OFF)
set(INSTALL_MANPAGES OFF)
add_subdirectory(lib/libsndfile)
add_subdirectory(src)